k8s/apps/base/searx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searx
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: searx
